# TransportKit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  version
CMake/: FindCURL.cmake  FindGTest.cmake  Globals.cmake  SetupCXX.cmake  SetupFmt.cmake  SetupGTest.cmake
Documents/: TransportKit.drawio
Scripts/: format.sh
Source/: CMakeLists.txt
Source/KFC/: Addr.cc  Addr.h  AddrTest.cc  Assert.h  Async.cc  Async.h  AsyncTest.cc  Async_Test.cc  Bits.cc  Bits.h  BitsTest.cc  BlockingPool.cc  BlockingPool.h  BlockingPoolTest.cc  CMakeLists.txt  Clock.cc  Clock.h  Condition.cc  Condition.h  Condvar.cc  Condvar.h  CopyMove.h  Disposer.cc  Disposer.h  Endian.h  Exception.cc  Exception.h  ExceptionTest.cc  Exchange.h  Format.cc  Format.h  Function.h  IOBuf.cc  IOBuf.h  List.h  ListTest.cc  List_Test.cc  Log.cc  Log.h  LogTest.cc  (+66 more)
Source/KFC/Unix/: EventPort.cc  EventPort.h  EventPort_Test.cc  Fd.cc  Fd.h  OwnFd.cc  OwnFd.h
Source/TX/: Addr.cc  Addr.h  AddrTest.cc  Assert.h  Bits.h  CMakeLists.txt  Clock.cc  Clock.h  Condvar.h  Endian.h  Exception.h  Exchange.h  Format.h  Function.h  IOBuf.cc  IOBuf.h  Log.cc  Log.h  LogTest.cc  Memory.h  Mutex.h  Option.h  Own.h  Path.h  Platform.h  Ref.h  RefTest.cc  Result.h  ResultTest.cc  RunLoop.cc  RunLoop.h  RunLoopTest.cc  RunLoopThread.cc  RunLoopThread.h  Runtime.h  Sleep.h  Socket.h  Span.h  String.cc  String.h  (+13 more)
Source/TX/fs/: File.h  FileTest.cc
Source/TX/io/: Error.h
Source/TX/net/: DNS.h  Error.h  TCP.h  UDP.h  UNIX.h
Source/TX/runtime/: Async.h  AsyncTest.cc  BlockingPool.cc  BlockingPool.h  BlockingPoolTest.cc  Driver.h  EventLoop.h  EventSource.h  MultiThreadScheduler.h  Runtime.h  RuntimeTest.cc  Scheduler.h  SingleThreadScheduler.h  SingleThreadSchedulerTest.cc  Task.h
Source/TransportCore/: CMakeLists.txt
Source/TransportCore/API/: TransportCore.cc  TransportCore.h  TransportCoreBase.h  TransportCoreErrorCode.cc  TransportCoreErrorCode.h  TransportCoreOption.h  TransportCoreTest.cc
Source/TransportCore/Cache/: FileCache.h
Source/TransportCore/Engine/: Downloader.h
Source/TransportCore/Global/: Global.cc  Global.h  Option.h
Source/TransportCore/Log/: Log.cc  Log.h
Source/TransportCore/P2P/: Stun.cc  Stun.h
Source/TransportCore/Schedule/: Scheduler.cc  Scheduler.h  Task.h  TaskManager.cc  TaskManager.h  TaskManagerTest.cc
Source/TransportCore/Task/: NoopScheduler.h  Scheduler.cc  Scheduler.h  Task.cc  Task.h  TaskManager.cc  TaskManager.h  TaskManagerTest.cc  TaskScheduler.cc  TaskScheduler.h
Source/TransportCore/task/: NoopScheduler.h  Scheduler.cc  Scheduler.h  Task.h  TaskId.cc  TaskId.h  TaskIdTest.cc  TaskManager.cc  TaskManager.h  TaskManagerTest.cc
